--- a/slider.html
+++ b/slider.html
@@ -8,7 +8,7 @@
     <!-- favicon -->
     <link rel="icon" href="https://yt3.ggpht.com/a/AGF-l78km1YyNXmF0r3-0CycCA0HLA_i6zYn_8NZEg=s900-c-k-c0xffffffff-no-rj-mo" type="image/gif" sizes="16x16">
     <!-- EXTERNAL LINKS -->
-    <script src="http://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
+    <script src="http://code.jquery.com/jquery-3.4.1.min.js" importance = "low" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick-theme.min.css">
     <style>
@@ -51,15 +51,15 @@
 <body>
     <section>
             <div id="containerSlider">
-                <div id="slidingImage"> <img src="img/img1.png" alt="image1"> </div>
-                <div id="slidingImage"> <img src="img/img2.png" alt="image2"> </div>
-                <div id="slidingImage"> <img src="img/img3.png" alt="image3"> </div>
-                <div id="slidingImage"> <img src="img/img4.png" alt="image4"> </div>
+                <div id="slidingImage"> <img src="img/img1.png" alt="image1" importance = "high"> </div>
+                <div id="slidingImage"> <img src="img/img2.png" alt="image2" importance = "low"> </div>
+                <div id="slidingImage"> <img src="img/img3.png" alt="image3" importance = "low"> </div>
+                <div id="slidingImage"> <img src="img/img4.png" alt="image4" importance = "low"> </div>
             </div>
     </section>
 </body>
     <!-- <script src=“https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick.min.js”></script> -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick.min.js" importance = "low"></script>
     <script>
         $(document).ready(function()
         {
